force-app/main/default/objects/Voucher__c/Voucher__c.object-meta.xml
<CustomObject>
    <description>Stores the vouchers available.</description>
    <label>Voucher/Deal</label>
    <nameField>
        <displayFormat>VD-{0000}</displayFormat>
        <label>Voucher Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vouchers/Deals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>