force-app/main/default/objects/Voucher__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Available discount.</description>
    <label>Discount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>